# python-project-83

./: .env  .env.txt  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  database.py  db.py  html.py
page_analyzer/templates/: base.html  basic.html  header.html  index.html  show.html  url.html  urls.html
page_analyzer/templates/components/: header.html  messages.html
page_analyzer/templates/error/: 404.html  500.html  footer.html
