[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a site that analyzes websites for SEO suitability."
authors = ["goryay <iam.goryn@gmail.com>"]
readme = "README.md"
packages = [{ include = "page_analyzer" },]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
