[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a site that analyzes websites for SEO suitability."
authors = ["goryay <iam.goryn@gmail.com>"]
readme = "README.md"
packages = [{ include = "page_analyzer" },]

[tool.poetry.dependencies]
python = "^3.10.12"
psycopg2-binary = "^2.9.9"
flask = "^3.0.0"
gunicorn = "^20.1.0"
validators = "^0.20.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
